get working cert-manager and kube-prometheus-stack

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ helm/cert-manager/ca.crt
 helm/cert-manager/ca.key
 helm/cert-manager/secret-ca.yaml
 data/**
+argocd-k3d-deployments/cert-manager/secret-ca.yaml
