--- a/argocd/base-services/opentelemetry-operator/opentelemetry-collector-instrumentation.yaml
+++ b/argocd/base-services/opentelemetry-operator/opentelemetry-collector-instrumentation.yaml
@@ -3,15 +3,15 @@ kind: Application
 metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
-  name: cert-manager-default-clusterissuer
+  name: opentelemetry-collector-instrumentation
   namespace: argocd
 spec:
   destination:
-    namespace: cert-manager
+    namespace: opentelemetry
     server: https://kubernetes.default.svc
   project: base-services
   source:
-    path: base-services/cert-manager
+    path: base-services/opentelemetry-operator/collector-instrumentation
     repoURL: https://github.com/lukeab/fakerepo.git
   syncPolicy:
     syncOptions:
