--- a/argocd/base-services/opentelemetry-operator/collector-instrumentation/Instrumentation.yaml
+++ b/argocd/base-services/opentelemetry-operator/collector-instrumentation/Instrumentation.yaml
@@ -4,7 +4,7 @@ metadata:
   name: my-instrumentation
 spec:
   exporter:
-    endpoint: my-collector-collector.otel-operator.svc.cluster.local:4317
+    endpoint: my-collector-collector.opentelemetry-operator.svc.cluster.local:4317
   propagators:
     - tracecontext
     - baggage
