--- a/helm/argocd/values.yaml
+++ b/helm/argocd/values.yaml
@@ -1,21 +1,62 @@
+
+## Globally shared configuration
+global:
+
+  # Default logging options used by all components
+  logging:
+    # -- Set the global logging format. Either: `text` or `json`
+    format: text
+    # -- Set the global logging level. One of: `debug`, `info`, `warn` or `error`
+    level: info
+
+## Argo Configs
 configs:
+  # General Argo CD configuration
+  ## Ref: https://github.com/argoproj/argo-cd/blob/master/docs/operator-manual/argocd-cm.yaml
+  cm:
+    # -- Argo CD's externally facing base URL (optional). Required when configuring SSO
+    url: "argocd.local-dev.local.gd"
+
+    # -- Enable exec feature in Argo UI
+    ## Ref: https://argo-cd.readthedocs.io/en/latest/operator-manual/rbac/#exec-resource
+    exec.enabled: true
+
+    # -- Timeout to discover if a new manifests version got published to the repository
+    timeout.reconciliation: 180s
+
+    # -- Timeout to refresh application data as well as target manifests cache
+    timeout.hard.reconciliation: 0s
+
+  # Argo CD configuration parameters
+  ## Ref: https://github.com/argoproj/argo-cd/blob/master/docs/operator-manual/argocd-cmd-params-cm.yaml
   params:
+
+    ## Generic parameters
+    # -- Open-Telemetry collector address: (e.g. "otel-collector:4317")
+    otlp.address: ''
+
+    ## Server properties
+    # -- Run server without TLS
     server.insecure: true
+
+## Server
 server:
+
   ingress:
-    enabled: true
-    #https: false
-    annotations:
+
+    enabled: enabled
+
+    annotations: 
       #kubernetes.io/ingress.class: traefik
-      #ingress.kubernetes.io/ssl-redirect: "true"
-      #cert-manager.io/cluster-issuer: "ca-local-dev"
-    hosts: 
-      - argocd.localdev.local.gd
-    # tls: 
-    #   - secretName: argocd-tls
-    #     hosts:
-    #       - argocd.localdev.local.gd
-  # metrics:
-  #   enabled: true
-  #   serviceMonitor:
-  #     enabled: true
+      ingress.kubernetes.io/ssl-redirect: "true"
+      cert-manager.io/cluster-issuer: "ca-local-dev"
+
+    ingressClassName: ""
+
+    hosts:
+       - argocd.local-dev.local.gd
+
+    tls: 
+      - secretName: argocd-tls
+        hosts:
+          - argocd.local-dev.local.gd
