--- a/argocd/base-services/opentelemetry-operator/opentelemetry-operator.yaml
+++ b/argocd/base-services/opentelemetry-operator/opentelemetry-operator.yaml
@@ -30,4 +30,4 @@ spec:
     automated: {}
     syncOptions:
       - CreateNamespace=true
-      - ServerSideApply=true
+      #- ServerSideApply=true
