Update Readme and cleanup old test files

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -77,10 +77,10 @@ tasks:
 
         echo -e "Argocd:\t https://$(kubectl get ingress argocd-server -n argocd --output=jsonpath='{.spec.rules[0].host}')\tuser: admin\tpassword: $(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)\n"
 
+        echo -e "Grafana:\t https://$(kubectl get ingress kube-prometheus-stack-grafana -n prometheus --output=jsonpath='{.spec.rules[0].host}')\tuser: admin\tpassword: prom-operator\n"
+
         echo -e "Prometheus:\t https://$(kubectl get ingress kube-prometheus-stack-prometheus -n prometheus --output=jsonpath='{.spec.rules[0].host}')\n"
 
         echo -e "Alertmanager:\t https://$(kubectl get ingress kube-prometheus-stack-alertmanager -n prometheus --output=jsonpath='{.spec.rules[0].host}')\n"
 
-        echo -e "Grafana:\t https://$(kubectl get ingress kube-prometheus-stack-grafana -n prometheus --output=jsonpath='{.spec.rules[0].host}')"
-        echo ""
     silent: true
