--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -77,7 +77,7 @@ tasks:
 
         echo -e "Argocd:\t https://$(kubectl get ingress argocd-server -n argocd --output=jsonpath='{.spec.rules[0].host}')\tuser: admin\tpassword: $(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)\n"
 
-        echo -e "Grafana:\t https://$(kubectl get ingress kube-prometheus-stack-grafana -n prometheus --output=jsonpath='{.spec.rules[0].host}')\tuser: admin\tpassword: prom-operator\n"
+        echo -e "Grafana:\t https://$(kubectl get ingress kube-prometheus-stack-grafana -n prometheus --output=jsonpath='{.spec.rules[0].host}')\tuser: $(kubectl -n prometheus get secret kube-prometheus-stack-grafana -ojsonpath="{.data.admin-user}"|base64 -d)\tpassword: $(kubectl -n prometheus get secret kube-prometheus-stack-grafana -ojsonpath="{.data.admin-password}"|base64 -d)\n"
 
         echo -e "Prometheus:\t https://$(kubectl get ingress kube-prometheus-stack-prometheus -n prometheus --output=jsonpath='{.spec.rules[0].host}')\n"
 
