--- a/argocd/base-services/prometheus-stack/prometheus-stack.yaml
+++ b/argocd/base-services/prometheus-stack/prometheus-stack.yaml
@@ -21,7 +21,6 @@ spec:
           ingress:
             enabled: true
             annotations:
-              kubernetes.io/ingress.class: traefik
               ingress.kubernetes.io/ssl-redirect: "true"
               cert-manager.io/cluster-issuer: ca-local-dev
             hosts: 
@@ -31,10 +30,10 @@ spec:
                 hosts:
                   - alertmanager.local-dev.local.gd
         grafana:
+          adminPassword: prom-operator
           ingress:
             enabled: true
             annotations:
-              kubernetes.io/ingress.class: traefik
               ingress.kubernetes.io/ssl-redirect: "true"
               cert-manager.io/cluster-issuer: ca-local-dev
             hosts: 
@@ -82,7 +81,6 @@ spec:
           ingress:
             enabled: true
             annotations:
-              kubernetes.io/ingress.class: traefik
               ingress.kubernetes.io/ssl-redirect: "true"
               cert-manager.io/cluster-issuer: ca-local-dev
             hosts:
